--- a/locales/ro/common.json
+++ b/locales/ro/common.json
@@ -256,7 +256,7 @@
     "phonePlaceholder": "Introduceți numărul de telefon",
     "messageLabel": "Mesajul dumneavoastră*",
     "messageError": "Vă rugăm să introduceți mesajul dumneavoastră!",
-    "messagePlaceholder": "Introduceți mesajul dumneavoastră",
+    "messagePlaceholder": "Descrie-ți tipul de mobilier de care aveţi nevoie",
     "submitButton": "Trimiteți",
     "contactDetails": "Date de contact",
     "address": "Programează o întâlnire cu unul dintre consultanții noștri la Str. Cazaban Nr. 50, Apartament 1, Oradea, Bihor, România",
