--- a/locales/ro/common.json
+++ b/locales/ro/common.json
@@ -175,7 +175,8 @@
   },
   "BlogBanner": {
     "subHeading": "Bloguri",
-    "heading": "Transformă-ți bucătăria într-o capodopera modernă"
+    "heading": "Transformă-ți bucătăria într-o capodopera modernă",
+    "back":"Mergi înapoi!"
   },
 
   "TipsBanner": {
